chore: add cdevent endpoint
